--- a/service/elasticsearch-master.yaml
+++ b/service/elasticsearch-master.yaml
@@ -2,23 +2,23 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    meta.helm.sh/release-name: elasticsearch-1626291043
+    meta.helm.sh/release-name: elasticsearch
     meta.helm.sh/release-namespace: default
-  creationTimestamp: "2021-07-14T19:30:46Z"
+  creationTimestamp: "2021-07-15T04:37:17Z"
   labels:
     app: elasticsearch-master
     app.kubernetes.io/managed-by: Helm
     chart: elasticsearch
     heritage: Helm
-    release: elasticsearch-1626291043
+    release: elasticsearch
   name: elasticsearch-master
   namespace: default
-  resourceVersion: "5787"
-  uid: 447355d0-2264-4ac4-b6d2-60121b4c1b2d
+  resourceVersion: "18871"
+  uid: e249a428-3e2b-46f0-96d2-02e30740eae9
 spec:
-  clusterIP: 10.100.105.165
+  clusterIP: 10.99.182.150
   clusterIPs:
-  - 10.100.105.165
+  - 10.99.182.150
   ipFamilies:
   - IPv4
   ipFamilyPolicy: SingleStack
@@ -34,7 +34,7 @@ spec:
   selector:
     app: elasticsearch-master
     chart: elasticsearch
-    release: elasticsearch-1626291043
+    release: elasticsearch
   sessionAffinity: None
   type: ClusterIP
 status:
