--- a/values_prometheus.yaml
+++ b/values_prometheus.yaml
@@ -1,7 +1,9 @@
 serverFiles:
   prometheus.yml:
     scrape_configs:
-      - job_name: prometheus
+      - job_name: spring-actuator
+        metrics_path: '/actuator/prometheus'
+        scrape_interval: 5s
         static_configs:
           - targets:
               - test-image:8080
